--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "gatsby-transformer-json": "^4.0.0",
     "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "postcss-reporter": "^7.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
